관리자 온보딩/평가 기능 보완