@@ -1,30 +1,38 @@
 /**
  * @FileName : RoadmapServiceImpl.java
- * @Description : ???ル봿?????轅붽틓???????????⑥쥓????黎??筌??醫됲뀭???Β?堉????袁⑸즴?????????댁삩???Service
- *                - ?????????뉖????轅붽틓??????轅붽틓????勇???????덈폇??????살퓢癲??????????????黎??筌??醫됲뀭???Β?堉???????黎??筌??믨퀡???????
- * @Author : ?關?쒎첎????????ㅼ뒩??
+ * @Description : AI 온보딩 로드맵 생성 및 추천 로직 담당 서비스
+ *                - 사원별 개인화된 온보딩 학습 경로 자동 생성 및 관리
+ *                - 콘텐츠 추천 로직과 학습 일정 관리, 캘린더 연동 처리
+ * @Author : 김다솜
  * @Date : 2026. 05. 07
  * @Modification_History
  * @
- * @ ????蹂κ텥???        ????蹂κ텥???       ????蹂κ텥??????쇨덧??
+ * @ 수정일자        수정자       수정내용
  * @ ----------    ---------    -------------------------------
- * @ 2026.05.07    ?關?쒎첎????????ㅼ뒩??       ?轅붽틓????彛?????袁⑸즴??????ル봿????嶺뚮ㅏ援앯뙴??轅붽틓?????????살퓢癲???????????selectRoadmapContents) ??????삳눇?
- * @ 2026.05.11    ?關?쒎첎????????ㅼ뒩??       ?黎??筌??醫됲뀭???Β?堉????癲????????????살퓢癲?????? ??????????轅붽틓????筌뤾쑴??????釉먮빱???逆???⑸걦????黎??筌??믨퀡?????ㅼ뒧????
+ * @ 2026.05.07    김다솜        최초 생성 및 로드맵 자동 생성 로직(selectRoadmapContents) 구현
+ * @ 2026.05.11    김다솜        로드맵 아이템 수정/삭제 및 일정 관리 연동 보완
+ * @ 2026.05.14    김다솜        로드맵 재생성 시 진행 상태 복구, 캘린더 연동 최적화 및 컴파일 오류 수정
  */
 
 package com.ict06.team1_fin_pj.domain.onboarding.service;
 
+import com.ict06.team1_fin_pj.common.dto.onboarding.AdminRoadItemRequestDto;
 import com.ict06.team1_fin_pj.common.dto.onboarding.RoadmapGroupResponse;
 import com.ict06.team1_fin_pj.common.dto.onboarding.RoadmapItemResponse;
 import com.ict06.team1_fin_pj.common.dto.onboarding.RoadmapResponse;
 import com.ict06.team1_fin_pj.domain.auth.repository.EmpRepository;
+import com.ict06.team1_fin_pj.domain.calendar.entity.ScheduleEntity;
+import com.ict06.team1_fin_pj.domain.calendar.entity.ScheduleType;
+import com.ict06.team1_fin_pj.domain.calendar.repository.CalendarRepository;
 import com.ict06.team1_fin_pj.domain.employee.entity.EmpEntity;
+import com.ict06.team1_fin_pj.domain.onboarding.entity.ChecklistEntity;
 import com.ict06.team1_fin_pj.domain.onboarding.entity.GeneratedType;
 import com.ict06.team1_fin_pj.domain.onboarding.entity.OnContentEntity;
 import com.ict06.team1_fin_pj.domain.onboarding.entity.ProgressStatus;
 import com.ict06.team1_fin_pj.domain.onboarding.entity.RoadItemEntity;
 import com.ict06.team1_fin_pj.domain.onboarding.entity.RoadProgressEntity;
 import com.ict06.team1_fin_pj.domain.onboarding.entity.RoadmapEntity;
+import com.ict06.team1_fin_pj.domain.onboarding.repository.ChecklistRepository;
 import com.ict06.team1_fin_pj.domain.onboarding.repository.OnContentRepository;
 import com.ict06.team1_fin_pj.domain.onboarding.repository.RoadItemRepository;
 import com.ict06.team1_fin_pj.domain.onboarding.repository.RoadProgressRepository;
@@ -36,8 +44,9 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.LinkedHashSet;
+import java.util.Arrays;
 import java.util.Comparator;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -52,11 +61,15 @@ public class RoadmapServiceImpl {
     private final RoadItemRepository roadItemRepository;
     private final RoadProgressRepository roadProgressRepository;
     private final OnContentRepository onContentRepository;
+    private final RoadProgressServiceImpl roadProgressService;
+    private final CalendarRepository calendarRepository;
+    private final ChecklistRepository checklistRepository;
 
     @Transactional
     public RoadmapResponse getOrCreateRoadmap(String empNo) {
         EmpEntity emp = empRepository.findByEmpNo(empNo)
                 .orElseThrow(() -> new RuntimeException("Employee not found."));
+        validateRoadmapEligibleEmployee(emp);
 
         RoadmapEntity roadmap = roadmapRepository
                 .findFirstByEmployee_EmpNoOrderByRoadmapIdDesc(empNo)
@@ -66,6 +79,7 @@ public class RoadmapServiceImpl {
                 roadItemRepository.findByRoadmap_RoadmapIdOrderByOrderNo(roadmap.getRoadmapId());
 
         if (existingItems.isEmpty()) {
+            roadmapRepository.delete(roadmap);
             roadmap = createDefaultRoadmap(emp);
         }
 
@@ -76,6 +90,7 @@ public class RoadmapServiceImpl {
     public RoadmapEntity regenerateRoadmap(String empNo) {
         EmpEntity emp = empRepository.findByEmpNo(empNo)
                 .orElseThrow(() -> new RuntimeException("Employee not found."));
+        validateRoadmapEligibleEmployee(emp);
 
         return createDefaultRoadmap(emp);
     }
@@ -86,14 +101,68 @@ public class RoadmapServiceImpl {
                 .orElseThrow(() -> new RuntimeException("Roadmap not found."));
 
         String empNo = roadmap.getEmployee().getEmpNo();
+        validateRoadmapEligibleEmployee(roadmap.getEmployee());
+
+        List<RoadItemEntity> oldItems =
+                roadItemRepository.findByRoadmap_RoadmapIdOrderByOrderNo(roadmapId);
+        List<RoadProgressEntity> oldProgress = roadProgressRepository.findByEmployee_EmpNo(empNo);
+        List<String> retainedContentTitles = extractRetainedContentTitles(oldItems, oldProgress);
+
+        deleteCalendarSchedules(roadmapId);
         roadProgressRepository.deleteByItem_Roadmap_RoadmapId(roadmapId);
+        roadItemRepository.deleteByRoadmap_RoadmapId(roadmapId);
         roadmapRepository.delete(roadmap);
         roadmapRepository.flush();
 
         EmpEntity emp = empRepository.findByEmpNo(empNo)
                 .orElseThrow(() -> new RuntimeException("Employee not found."));
 
-        return createDefaultRoadmap(emp);
+        relinkChecklistContentsByTitle();
+        RoadmapEntity newRoadmap = createDefaultRoadmap(emp);
+        appendRetainedContents(newRoadmap, emp, retainedContentTitles);
+        List<RoadItemEntity> newItems =
+                roadItemRepository.findByRoadmap_RoadmapIdOrderByOrderNo(newRoadmap.getRoadmapId());
+        roadProgressService.restoreProgress(newItems, oldProgress);
+
+        return newRoadmap;
+    }
+
+    /**
+     * 로드맵 아이템 삭제 및 연결 일정 제거
+     */
+    @Transactional
+    public void deleteRoadItem(Integer itemId) {
+        RoadItemEntity item = roadItemRepository.findById(itemId)
+                .orElseThrow(() -> new RuntimeException("Roadmap item not found."));
+
+        deleteSingleCalendarSchedule(item);
+        roadProgressRepository.deleteByItem_ItemId(itemId);
+        roadItemRepository.delete(item);
+    }
+
+    /**
+     * 로드맵 아이템 수정 및 일정 동기화
+     */
+    @Transactional
+    public void updateRoadItem(Integer itemId, AdminRoadItemRequestDto requestDto) {
+        RoadItemEntity item = roadItemRepository.findById(itemId)
+                .orElseThrow(() -> new RuntimeException("Roadmap item not found."));
+
+        OnContentEntity content = onContentRepository.findById(requestDto.getContentId())
+                .orElseThrow(() -> new RuntimeException("Content not found."));
+
+        item.updateRoadItem(
+                content,
+                requestDto.getItemTitle(),
+                item.getRecommendationReason(),
+                requestDto.getCategoryName(),
+                requestDto.getOrderNo(),
+                requestDto.getStartDate(),
+                requestDto.getDueDate()
+        );
+
+        roadItemRepository.save(item);
+        syncToCalendar(item);
     }
 
     private RoadmapEntity createDefaultRoadmap(EmpEntity emp) {
@@ -177,7 +246,6 @@ public class RoadmapServiceImpl {
         }
 
         String targetPosition = normalize(content.getTargetPosition());
-
         if (targetPosition.isBlank()) {
             return false;
         }
@@ -207,7 +275,7 @@ public class RoadmapServiceImpl {
     }
 
     private boolean isDevelopmentTrack(EmpEntity emp) {
-        List<String> employeeKeywords = List.of(
+        List<String> employeeKeywords = Arrays.asList(
                 emp.getDepartment() != null ? emp.getDepartment().getDeptName() : null,
                 emp.getDepartment() != null && emp.getDepartment().getParentDept() != null
                         ? emp.getDepartment().getParentDept().getDeptName()
@@ -219,25 +287,25 @@ public class RoadmapServiceImpl {
                 .filter(Objects::nonNull)
                 .map(this::normalize)
                 .anyMatch(keyword ->
-                        keyword.contains("\uAC1C\uBC1C")
+                        keyword.contains("개발")
                                 || keyword.contains("backend")
                                 || keyword.contains("frontend")
-                                || keyword.contains("\uBC31\uC5D4\uB4DC")
-                                || keyword.contains("\uD504\uB860\uD2B8")
+                                || keyword.contains("백엔드")
+                                || keyword.contains("프론트")
                                 || keyword.contains("engineer")
-                                || keyword.contains("\uC5D4\uC9C0\uB2C8\uC5B4")
+                                || keyword.contains("엔지니어")
                 );
     }
 
     private boolean isDevelopmentCategory(OnContentEntity content) {
         return contentMatchesAnyKeyword(
                 content,
-                List.of("\uAC1C\uBC1C", "backend", "frontend", "\uBC31\uC5D4\uB4DC", "\uD504\uB860\uD2B8", "spring", "jpa", "redis", "react", "api")
+                List.of("개발", "backend", "frontend", "백엔드", "프론트", "spring", "jpa", "redis", "react", "api")
         );
     }
 
     private boolean isDesignTrack(EmpEntity emp) {
-        List<String> employeeKeywords = List.of(
+        List<String> employeeKeywords = Arrays.asList(
                 emp.getDepartment() != null ? emp.getDepartment().getDeptName() : null,
                 emp.getDepartment() != null && emp.getDepartment().getParentDept() != null
                         ? emp.getDepartment().getParentDept().getDeptName()
@@ -249,7 +317,7 @@ public class RoadmapServiceImpl {
                 .filter(Objects::nonNull)
                 .map(this::normalize)
                 .anyMatch(keyword ->
-                        keyword.contains("\uB514\uC790\uC778")
+                        keyword.contains("디자인")
                                 || keyword.contains("design")
                                 || keyword.contains("ux")
                                 || keyword.contains("ui")
@@ -259,7 +327,7 @@ public class RoadmapServiceImpl {
     private boolean isDesignCategory(OnContentEntity content) {
         return contentMatchesAnyKeyword(
                 content,
-                List.of("\uB514\uC790\uC778", "design", "ux", "ui", "figma", "prototype", "qa")
+                List.of("디자인", "design", "ux", "ui", "figma", "prototype", "qa")
         );
     }
 
@@ -267,7 +335,7 @@ public class RoadmapServiceImpl {
         String category = nullToEmpty(content.getCategory()).trim();
         String targetPosition = nullToEmpty(content.getTargetPosition()).trim();
 
-        return "\uC804\uC0AC".equals(category) || "\uACF5\uD1B5".equals(targetPosition);
+        return "전사".equals(category) || "공통".equals(targetPosition);
     }
 
     private boolean matchesEmployeePosition(OnContentEntity content, EmpEntity emp) {
@@ -308,6 +376,91 @@ public class RoadmapServiceImpl {
 
     private String nullToEmpty(String value) {
         return value == null ? "" : value;
+    }
+
+    private List<String> extractRetainedContentTitles(
+            List<RoadItemEntity> oldItems,
+            List<RoadProgressEntity> oldProgress
+    ) {
+        Map<Integer, ProgressStatus> progressStatusMap = oldProgress.stream()
+                .filter(progress -> progress.getItem() != null)
+                .collect(Collectors.toMap(
+                        progress -> progress.getItem().getItemId(),
+                        RoadProgressEntity::getStatus,
+                        (existing, replacement) -> existing
+                ));
+
+        LinkedHashSet<String> retainedTitles = new LinkedHashSet<>();
+
+        for (RoadItemEntity item : oldItems) {
+            boolean mandatory = Boolean.TRUE.equals(item.getContent().getIsMandatory());
+            ProgressStatus status = progressStatusMap.getOrDefault(item.getItemId(), ProgressStatus.NOT_STARTED);
+            boolean started = status == ProgressStatus.IN_PROGRESS || status == ProgressStatus.COMPLETED;
+
+            if (mandatory || started) {
+                retainedTitles.add(item.getContent().getTitle());
+            }
+        }
+
+        return retainedTitles.stream().toList();
+    }
+
+    private void appendRetainedContents(RoadmapEntity roadmap, EmpEntity emp, List<String> retainedContentTitles) {
+        if (retainedContentTitles == null || retainedContentTitles.isEmpty()) {
+            return;
+        }
+
+        List<RoadItemEntity> currentItems = roadItemRepository.findByRoadmap_RoadmapIdOrderByOrderNo(roadmap.getRoadmapId());
+        LinkedHashSet<String> existingTitles = currentItems.stream()
+                .map(item -> item.getContent().getTitle())
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+
+        Map<String, OnContentEntity> contentByTitle = onContentRepository.findAll().stream()
+                .collect(Collectors.toMap(OnContentEntity::getTitle, content -> content, (existing, replacement) -> existing));
+
+        int nextOrder = currentItems.size() + 1;
+        for (String title : retainedContentTitles) {
+            if (existingTitles.contains(title)) {
+                continue;
+            }
+
+            OnContentEntity content = contentByTitle.get(title);
+            if (content == null) {
+                continue;
+            }
+
+            createItem(
+                    roadmap,
+                    emp,
+                    content,
+                    resolveCategoryName(content),
+                    buildRecommendationReason(content, emp),
+                    nextOrder++
+            );
+            existingTitles.add(title);
+        }
+    }
+
+    private void relinkChecklistContentsByTitle() {
+        Map<String, OnContentEntity> contentByTitle = onContentRepository.findAll().stream()
+                .collect(Collectors.toMap(OnContentEntity::getTitle, content -> content, (existing, replacement) -> existing));
+
+        List<ChecklistEntity> checklists = checklistRepository.findByRelatedContentIsNotNull();
+        for (ChecklistEntity checklist : checklists) {
+            if (checklist.getRelatedContent() == null) {
+                continue;
+            }
+
+            String title = checklist.getRelatedContent().getTitle();
+            OnContentEntity currentContent = contentByTitle.get(title);
+            if (currentContent == null) {
+                continue;
+            }
+
+            if (!Objects.equals(checklist.getRelatedContent().getContentId(), currentContent.getContentId())) {
+                checklist.updateRelatedContent(currentContent);
+            }
+        }
     }
 
     private boolean contentMatchesAnyKeyword(OnContentEntity content, List<String> keywords) {
@@ -377,6 +530,89 @@ public class RoadmapServiceImpl {
                 .build();
 
         roadProgressRepository.save(progress);
+        syncToCalendar(savedItem);
+    }
+
+    /**
+     * 온보딩 학습 일정을 캘린더 일정과 동기화
+     */
+    public void syncToCalendar(RoadItemEntity item) {
+        String empNo = item.getRoadmap().getEmployee().getEmpNo();
+        String ridTag = "[RID:" + item.getItemId() + "]";
+
+        ScheduleEntity schedule = calendarRepository.findByCreator_EmpNoAndCategory(empNo, "ONBOARDING").stream()
+                .filter(s -> s.getContent() != null && s.getContent().contains(ridTag))
+                .findFirst()
+                .orElse(null);
+
+        String title = "[온보딩] " + item.getItemTitle();
+        String content = item.getRecommendationReason() + "\n\n" + ridTag;
+
+        if (schedule == null) {
+            schedule = ScheduleEntity.builder()
+                    .title(title)
+                    .content(content)
+                    .startTime(item.getStartDate().atStartOfDay())
+                    .endTime(item.getDueDate().atTime(23, 59, 59))
+                    .type(ScheduleType.PERSONAL)
+                    .creator(item.getRoadmap().getEmployee())
+                    .department(item.getRoadmap().getEmployee().getDepartment())
+                    .category("ONBOARDING")
+                    .location(null)
+                    .isAllDay(true)
+                    .isPublic(false)
+                    .repeatRule(null)
+                    .isDeleted(false)
+                    .build();
+        } else {
+            schedule.updateSchedule(
+                    title,
+                    content,
+                    item.getStartDate().atStartOfDay(),
+                    item.getDueDate().atTime(23, 59, 59),
+                    schedule.getType() != null ? schedule.getType() : ScheduleType.PERSONAL,
+                    item.getRoadmap().getEmployee().getDepartment(),
+                    "ONBOARDING",
+                    schedule.getLocation(),
+                    true,
+                    false,
+                    schedule.getRepeatRule()
+            );
+        }
+
+        calendarRepository.save(schedule);
+    }
+
+    /**
+     * 로드맵 재생성 전 기존 온보딩 일정 전체 삭제
+     */
+    private void deleteCalendarSchedules(Integer roadmapId) {
+        List<RoadItemEntity> items = roadItemRepository.findByRoadmap_RoadmapIdOrderByOrderNo(roadmapId);
+        if (items.isEmpty()) {
+            return;
+        }
+
+        String empNo = items.get(0).getRoadmap().getEmployee().getEmpNo();
+        List<ScheduleEntity> onboardingSchedules = calendarRepository.findByCreator_EmpNoAndCategory(empNo, "ONBOARDING");
+
+        for (RoadItemEntity item : items) {
+            String ridTag = "[RID:" + item.getItemId() + "]";
+            onboardingSchedules.stream()
+                    .filter(schedule -> schedule.getContent() != null && schedule.getContent().contains(ridTag))
+                    .forEach(calendarRepository::delete);
+        }
+    }
+
+    /**
+     * 단일 로드맵 아이템 일정 삭제
+     */
+    private void deleteSingleCalendarSchedule(RoadItemEntity item) {
+        String empNo = item.getRoadmap().getEmployee().getEmpNo();
+        String ridTag = "[RID:" + item.getItemId() + "]";
+
+        calendarRepository.findByCreator_EmpNoAndCategory(empNo, "ONBOARDING").stream()
+                .filter(schedule -> schedule.getContent() != null && schedule.getContent().contains(ridTag))
+                .forEach(calendarRepository::delete);
     }
 
     private RoadmapResponse buildRoadmapResponse(String empNo, RoadmapEntity roadmap) {
@@ -430,26 +666,26 @@ public class RoadmapServiceImpl {
         LinkedHashSet<String> reasons = new LinkedHashSet<>();
 
         if (Boolean.TRUE.equals(content.getIsMandatory())) {
-            reasons.add("\uD544\uC218 \uD559\uC2B5 \uCF58\uD150\uCE20\uC785\uB2C8\uB2E4.");
+            reasons.add("필수 학습 콘텐츠입니다.");
         }
 
         if (matchesEmployeeDepartment(content, emp) && emp.getDepartment() != null) {
-            reasons.add(emp.getDepartment().getDeptName() + " \uB300\uC0C1 \uCD94\uCC9C\uC785\uB2C8\uB2E4.");
+            reasons.add(emp.getDepartment().getDeptName() + " 대상 추천입니다.");
         }
 
         if (matchesEmployeePosition(content, emp) && emp.getPosition() != null) {
-            reasons.add(emp.getPosition().getPositionName() + " \uC9C1\uBB34\uC640 \uC5F0\uAD00\uB41C \uCF58\uD150\uCE20\uC785\uB2C8\uB2E4.");
+            reasons.add(emp.getPosition().getPositionName() + " 직무와 연관된 콘텐츠입니다.");
         }
 
         String targetPosition = normalize(content.getTargetPosition());
-        if (reasons.isEmpty() && "\uACF5\uD1B5".equals(content.getTargetPosition())) {
-            reasons.add("\uC804\uC0AC \uACF5\uD1B5 \uC628\uBCF4\uB529 \uACFC\uC815\uC785\uB2C8\uB2E4.");
+        if (reasons.isEmpty() && "공통".equals(content.getTargetPosition())) {
+            reasons.add("전사 공통 온보딩 과정입니다.");
         } else if (reasons.isEmpty() && !targetPosition.isBlank()) {
-            reasons.add(content.getTargetPosition() + " \uAE30\uC900\uC73C\uB85C \uCD94\uCC9C\uB41C \uCF58\uD150\uCE20\uC785\uB2C8\uB2E4.");
+            reasons.add(content.getTargetPosition() + " 기준으로 추천된 콘텐츠입니다.");
         }
 
         if (content.getDifficulty() != null) {
-            reasons.add("\uB09C\uC774\uB3C4\uB294 " + content.getDifficulty().name() + " \uB2E8\uACC4\uC785\uB2C8\uB2E4.");
+            reasons.add("난이도는 " + content.getDifficulty().name() + " 단계입니다.");
         }
 
         return String.join(" ", reasons);
@@ -462,11 +698,6 @@ public class RoadmapServiceImpl {
 
         return !value.contains("�")
                 && !value.contains("??")
-                && !value.contains("?袁")
                 && value.codePoints().filter(Character::isLetterOrDigit).count() >= 4;
     }
 }
-
-
-
-
